k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: liveart
  namespace: liveart
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - liveart.dmytrenko.dev
      secretName: liveart-tls
  rules:
    - host: liveart.dmytrenko.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: liveart
                port:
                  number: 80
